# COVID-CH-dashboard

./: Dockerfile  README.md  SIR_forecast.py  bayesian_inference.py  clustering.py  config.toml  dashboard.py  docker-compose.yml  for_other_cantons.py  forecast.py  geoanalysis.py  get_data.py  plots.py  pyproject.toml  requirements.txt
app/: SIR_forecast.py  bayesian_inference.py  clustering.py  config.py  credits.py  dashboard.py  for_other_cantons.py  forecast.py  geoanalysis.py  get_data.py  plots.py
conda/: dev.yaml
docker/: Dockerfile  docker-compose.yaml  docker-compose.yml
nginx_conf/: covidch  streamlitnginxconf
